# pplabel/api/controller/annotation.py
@@ -1,5 +1,5 @@
 from .base import crud
-from ..model import Annotation, Task, Project
+from ..model import Annotation, Task, Project, Data
 from ..schema import AnnotationSchema
 from ..util import abort
 
@@ -19,4 +19,16 @@ get_all, get, post, put, delete = crud(Annotation, AnnotationSchema, [pre_add])
 def get_by_project(project_id):
     Project._exists(project_id)
     anns = Annotation._get(project_id=project_id, many=True)
+    return AnnotationSchema(many=True).dump(anns), 200
+
+
+def get_by_task(task_id):
+    Task._exists(task_id)
+    anns = Annotation._get(task_id=task_id, many=True)
+    return AnnotationSchema(many=True).dump(anns), 200
+
+
+def get_by_data(data_id):
+    Data._exists(data_id)
+    anns = Annotation._get(data_id=data_id, many=True)
     return AnnotationSchema(many=True).dump(anns), 200
